Java 9 compatibility fixes, requires Java 8 at a minimum.
Now requires Java 8 (JDK 1.8) or newer to build and run
because we can no longer use the JAXB classes anymore to
format ISO dates and encode/decode base-64.

Version bump to 1.23.